Added basic player

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <div class="video-player">
         <video playsinline src="https://storage.googleapis.com/gvabox/media/samples/stock.mp4"></video>
         <div id="adContainer"></div>
-        <div class="controls">
-            <button id="playPauseBtn">Play</button>
-            <button id="moveBtn">Move Player in DOM</button>
-        </div>
     </div>
     <div id="newParent"></div>
+    <div class="controls">
+        <button id="playPauseBtn">Play</button>
+        <button id="moveBtn">Move Player in DOM</button>
+    </div>
     <script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
+    <script type="text/javascript" src="/app.js"></script>
 </body>
 </html>
